--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "walmart-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ImFanJs.github.io/walmart-dashboard",
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "firebase": "^5.4.2",
+    "gh-pages": "^2.0.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "xml-js": "^1.6.7"
   },
   "devDependencies": {
     "react-scripts": "2.0.4"
@@ -13,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
